--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-#opencv-python-headless==4.5.3.56
+opencv-python-headless==4.10.0.84
 matplotlib==3.5.3
 tensorflow-gpu==2.9.0
 numpy==1.26.4
